Games to look into: DiRT, The PATH
=ToDo=
* GoG Outlast
* Steam pipe games

=Upcoming=
New Games
* Air Forte
* Anomaly Korea
* Anomaly 2
* Bad Hotel - Steam Only
* Sentinel 3: Homeworld
* Ricochet

* Brothers: A Tale of Two Sons - Contributed by Scandalon

* Shadowrun Returns - Contributed by Feline_Quota
* The King Of Fighters XIII - Steam only - Contributed by Feline_Quota
* Zeus: Master of Olympus - Contributed by beppe9000

Contributed by Arc Angel:
* Battlefield 4
* Call of Duty: Ghosts - Steam only
* Deadfall Adventures - Steam only

Updated for SteamPipe:
* Counter-Strike: Condition Zero: Deleted Scene
* Deathmatch Classic
* Half-Life: Blue Shift
* Half-Life: Opposing Force
* Half-Life: Source
* Half-Life Deathmatch: Source
* Half-Life 2: Episode One
* Half-Life 2: Episode Two
* Half-Life 2: Lost Coast 
* SiN
* Team Fortress Classic

Updated
* Final Fantasy VII - Added Steam path
* Final Fantasy VIII - Added Steam path
* Updated Left 4 Dead and Left 4 Dead to handle multiple languages

=2014-01-28=
* Long Live The Queen
* Papers, Please
* Updated Half-Life 2 for SteamPipe
* Updated Portal for SteamPipe

* Saint's Row IV - Contributed by Thomas Joiner

* Added Steam path for Knights of the Old Republic 2 - Contributed by savethelost007

Contributed by Arc Angel:
* Batman: Arkham Asylum - Added SteamCloud info
* Castlevania: Lords of Shadow - Steam only
* Darkness Within 2 - Latest patch moved save location
* Lost Planet 3
* Mars: War Logs
* Operation Thunderstorm (Vista/7 only)
* Outlast - Steam path
* Remember Me
* Shadow Warrior (2013)
* Splinter Cell: Blacklist - Ubisoft save storage
* Star Trek (2013) - Added Steam cloud path

Contributed by Anonymous Hero
* Champion Dreams
* Horsez
* Petz Horsez
* Petz Horsez 2
* Petz Horse Club
* Saddle Up: Time To Ride

=2013-06-15=
* Voxatron
Contributed By Scandalon
* Perspective
* Ur-Quan Masters HD
Contributed By LVS
* DLC Quest
Contributed by Arc Angel
* BioShock Infinite
* Brutal Legend PC
* Resident Evil 6