@@ -395,5 +395,116 @@
       <contributor>GameSave.Info</contributor>
     </version>
   </game>
+
+  <game name="Descent" added="1955-11-05T00:00:00" >
+    <title>Descent</title>
+    <version os="DOS">
+      <locations>
+        <path ev="installlocation" path="GAMES\DESCENT"/>
+        <path ev="steamcommon" path="Descent"/>
+        <path ev="installlocation" path="GOG.com\Descent and Descent 2\Descent"/>
+        <registry root="local_machine" key="SOFTWARE\GOG.com\GOGDESCENT" value="PATH"/>
+        <shortcut ev="startmenu" path="Programs\GOG.com\Descent and Descent 2\Descent\Documents\Readme.lnk"/>
+      </locations>
+      <files>
+        <include filename="*.PLR"/>
+        <include filename="*.SG*"/>
+      </files>
+      <files type="Replays">
+        <include filename="*.DEM"/>
+      </files>
+      <files type="Settings">
+        <include filename="DESCENT.CFG"/>
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+  </game>
+
+
+  <game name="DeusExHumanRevolution" follows="DeusExInvisibleWar" added="1955-11-05T00:00:00" >
+    <title>Deus Ex: Human Revolution</title>
+    <version platform="SteamCloud">
+      <locations>
+        <path ev="steamuserdata" path="28050"/>
+      </locations>
+      <files>
+        <include/>
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+    <version platform="SteamCloud" release="DirectorsCut">
+      <title>Deus Ex: Human Revolution - Director's Cut</title>
+      <locations>
+        <path ev="steamuserdata" path="238010"/>
+      </locations>
+      <files>
+        <include/>
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+  </game>
+
+  <game name="Sanctum2" >
+    <title>Sanctum 2</title>
+    <version platform="SteamCloud">
+      <locations>
+        <path ev="steamuserdata" path="210770"/>
+      </locations>
+      <files>
+        <include/>
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+    <version os="Windows">
+      <locations>
+        <path ev="userdocuments" path="My Games\Sanctum2"/>
+      </locations>
+      <files>
+        <include path="SanctumGame\Config" />
+        <include path="SanctumGame\Cloud" />
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+  </game>
+
+  <game name="SystemShock2" added="1955-11-05T00:00:00" >
+    <title>System Shock 2</title>
+    <version os="Windows">
+      <locations>
+        <path ev="installlocation" path="GOG.com\System Shock 2"/>
+        <path ev="steamcommon" path="SS2"/>
+        <registry root="local_machine" key="SOFTWARE\GOG.com\GOGSSHOCK2" value="PATH"/>
+        <registry root="local_machine" key="SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\shock2.exe" value="Path"/>
+        <shortcut ev="startmenu" path="Programs\GOG.com\System Shock 2\System Shock 2.lnk"/>
+      </locations>
+      <files>
+        <include path="save_*"/>
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+  </game>
+
+  <game name="BrokenAge" >
+    <title>Broken Age</title>
+    <version platform="SteamCloud">
+      <locations>
+        <path ev="steamuserdata" path="232790"/>
+      </locations>
+      <files>
+        <include/>
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+    <version os="Windows">
+      <locations>
+        <path ev="userdocuments" path="BrokenAge"/>
+      </locations>
+      <files>
+        <include  />
+      </files>
+      <contributor>GameSave.Info</contributor>
+    </version>
+  </game>
+  
 </programs>
 
